Adjust effective speed based on CPU load to optimize performance